<resources>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="app_name">XimalayaFM</string>
    <string name="Inner_Mongolia">内蒙古</string>
    <string name="a_plus">有声化平台</string>
    <string name="about">关于</string>
    <string name="accept">Accept</string>
    <string name="access_permissions">谁可以看</string>
    <string name="access_public">公开</string>
    <string name="access_secret">私密</string>
    <string name="account_bind">账号绑定</string>
    <string name="account_not_enough">余额不足，请充值</string>
    <string name="action_clear">清除缓存</string>
    <string name="action_printf_domain">打印域名表</string>
    <string name="action_printf_ip">打印IP表</string>
    <string name="action_settings">Settings</string>
    <string name="activity_apply">开始报名</string>
    <string name="activity_finish">活动结束</string>
    <string name="activity_ing">活动中</string>
    <string name="activity_rules">活动规则</string>
    <string name="ad_str">广告</string>
    <string name="ad_tag">广告</string>
    <string name="add_album">+专辑</string>
    <string name="add_download_fail">下载失败</string>
    <string name="add_download_success">加入下载队列成功</string>
    <string name="add_live_admin">你被主播设置为管理员啦~点击用户头像进行禁言管理，来做主播的小助手吧！</string>
    <string name="add_picture">+图片</string>
    <string name="add_track">+声音</string>
    <string name="advertisement_service">广告服务</string>
    <string name="al_app_name">喜马拉雅</string>
    <string name="al_btn_collect">订阅</string>
    <string name="al_btn_history">历史</string>
    <string name="al_btn_hot_album">推荐专辑</string>
    <string name="al_btn_hot_sound">热门声音</string>
    <string name="al_btn_local">本地</string>
    <string name="al_hello">欢迎使用喜马拉雅</string>
    <string name="al_hello_1">随时随地想听就听</string>
    <string name="al_title_collect">我的订阅</string>
    <string name="al_title_history">播放历史</string>
    <string name="al_title_hot_album">推荐专辑</string>
    <string name="al_title_hot_sound">热门声音</string>
    <string name="al_title_local">本地专辑</string>
    <string name="al_use_mobile_data_tip">,使用喜马拉雅将会消耗您的数据流量</string>
    <string name="alarm_content">闹钟时间到了</string>
    <string name="alarm_get_up">起床</string>
    <string name="alarm_help">闹铃帮助</string>
    <string name="alarm_help_360">已安装360卫士</string>
    <string name="alarm_help_baidu">已安装百度手机卫士</string>
    <string name="alarm_help_info">喜马拉雅已检测到您已安装下列应用，为了确保闹铃功能正常工作，请按照以下说明检查您的设备并进行设置。</string>
    <string name="alarm_help_lbe">已安装LBE安全大师</string>
    <string name="alarm_help_liebao">已安装猎豹清理大师</string>
    <string name="alarm_help_tencent">已安装腾讯手机管家</string>
    <string name="alarm_help_using_miui">正在使用MIUI系统</string>
    <string name="alarm_later">小睡10分钟</string>
    <string name="alarm_later_content">喜马拉雅闹铃</string>
    <string name="alarm_later_title">10分钟后闹铃再响</string>
    <string name="alarm_swith">闹铃开关</string>
    <string name="alarm_title">闹钟提醒</string>
    <string name="album_anchor_more">查看更多内容</string>
    <string name="album_anchor_title">内容简介</string>
    <string name="album_comment">评价</string>
    <string name="album_comment_all_title">所有评价</string>
    <string name="album_comment_entrance">我要评价</string>
    <string name="album_comment_more">查看更多评价</string>
    <string name="album_comment_nodata">暂无评价</string>
    <string name="album_comment_nodata_intro">快来抢伦家的＂第一次＂哦～</string>
    <string name="album_commented">您已经评价过本专辑~</string>
    <string name="album_copyright">版权方</string>
    <string name="album_count">专辑 (0)</string>
    <string name="album_create">创建新专辑</string>
    <string name="album_detail">详情</string>
    <string name="album_free_listen">免费试听</string>
    <string name="album_listen">即可专辑内畅听哦~</string>
    <string name="album_name">专辑名称</string>
    <string name="album_no_commented">还没有人评价过本专辑哦~</string>
    <string name="album_off_sale">您所访问的专辑已下架</string>
    <string name="album_recommend_more">查看更多推荐</string>
    <string name="album_rich_intro">专辑简介</string>
    <string name="album_score">%1$s分/%2$s人评价</string>
    <string name="album_scroll_footer_tip">继续滑动,查看节目列表</string>
    <string name="album_selected">选择专辑(0个)</string>
    <string name="album_subtitle">专辑副标题</string>
    <string name="album_tags">专辑标签</string>
    <string name="album_title">专辑详情</string>
    <string name="album_title_str">专辑标题</string>
    <string name="album_tracks">节目</string>
    <string name="album_tracks_count">0条声音</string>
    <string name="alipay">支付宝支付</string>
    <string name="all">全部</string>
    <string name="all_album">查看全部专辑</string>
    <string name="all_reply">全部回复</string>
    <string name="all_track">查看全部声音</string>
    <string name="already_num_flow">已被%s人关注</string>
    <string name="amount">金额 ：</string>
    <string name="anchor">主播</string>
    <string name="anchor_attestation">主播V认证</string>
    <string name="anchor_comment">专辑评价</string>
    <string name="anchor_info">主播信息</string>
    <string name="anchor_level">主播演绎</string>
    <string name="anchor_manager_center">主播管理中心</string>
    <string name="anchor_on_the_way">主播正在赶来的路上...</string>
    <string name="answer_notify">问答通知</string>
    <string name="answer_notify_hint">收到提问或者提问被回答时通知</string>
    <string name="apk_name_prefix">ting_</string>
    <string name="app_item_install">安装</string>
    <string name="app_item_name">名称</string>
    <string name="buy_login_tip">节目购买完后不可退回哦，同时为了保证您的购买记录不被丢失，请选择登录喜马拉雅账号后购买～</string>
    <string name="car_mode">车载模式</string>
    <string name="certain">确定</string>
    <string name="contact_us">联系我们</string>
    <string name="crosstalk_sounds">相声闹铃</string>
    <string name="default_sounds">默认铃声</string>
    <string name="downloaded_sounds">从已下载的声音中选择</string>
    <string name="downloaded_sounds_title">已下载声音</string>
    <string name="earning_points">赚积分,兑好礼</string>
    <string name="editor_recommend">小编推荐</string>
    <string name="editor_recommend_hint">小编每天为您精选优质节目</string>
    <string name="findfriend_from_iphone">找手机通讯录朋友</string>
    <string name="findfriend_from_qq">找QQ朋友</string>
    <string name="findfriend_from_weibo">找新浪微博朋友</string>
    <string name="findfriend_from_weixin">找微信朋友</string>
    <string name="live_history_radios">选择在线电台</string>
    <string name="live_notify">直播通知</string>
    <string name="live_notify_hint">关注的主播开始直播时通知</string>
    <string name="live_radios_title">在线电台</string>
    <string name="local_sounds_title">自带铃声</string>
    <string name="main_content" />
    <string name="mall_order">我的商城订单</string>
    <string name="music_sounds">音乐闹铃</string>
    <string name="my_points">我的积分</string>
    <string name="new_comment_reply">评论/评论回复</string>
    <string name="new_comment_reply_hint">节目收到评论或者评论被回复时通知</string>
    <string name="new_pwd_content">(6-20位数字或字母)</string>
    <string name="new_pwd_title">新密码</string>
    <string name="new_pwd_verify_content">确认输入</string>
    <string name="new_pwd_verify_title">确认密码</string>
    <string name="news_sounds">新闻闹铃</string>
    <string name="old_pwd_content">请输入当前密码</string>
    <string name="old_pwd_title">旧密码</string>
    <string name="online_sounds_title">在线声音</string>
    <string name="pay_cancel">取消</string>
    <string name="push_message">接收推送</string>
    <string name="set_amount">设置付费金额</string>
    <string name="setting_push_toast_01">包含如下推送内容：</string>
    <string name="setting_push_toast_02">勿扰时段：</string>
    <string name="share_app">分享喜马拉雅FM</string>
    <string name="subscribe_update">订阅更新</string>
    <string name="subscribe_update_hint">订阅的专辑有内容更新时通知</string>
    <string name="tip_should_pay">用户需要付费参与直播</string>
    <string name="wechatpay">微信支付</string>
    <string name="xi_icon">喜币</string>
    <string name="xidianpay">喜点支付</string>
</resources>