<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="#ff666666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/buy_login_tip" />
    <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/btn_wechat" android:background="@drawable/rectangle_green" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/wechatpay" />
    <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/btn_alipay" android:background="@drawable/rectangle_blue" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/alipay" />
    <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/btn_account" android:background="@drawable/rectangle_orange" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/xidianpay" />
    <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/btn_cancel" android:background="@drawable/rectangle_gray" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="30.0dip" android:text="@string/pay_cancel" />
</LinearLayout>