<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@string/main_content" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/top" layout="@layout/titlebar_top" />
    <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:id="@id/layout_old_pwd" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="15.0dip" android:layout_below="@id/top">
        <TextView android:textSize="16.0sp" android:layout_width="90.0dip" android:layout_marginLeft="10.0dip" android:text="@string/old_pwd_title" android:drawableRight="@null" style="@style/setting_text_title" />
        <EditText android:textSize="16.0sp" android:id="@id/et_old_pwd" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:hint="@string/old_pwd_content" android:inputType="textPassword" />
    </LinearLayout>
    <TextView android:id="@id/divide1" android:background="@color/border_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/layout_old_pwd" />
    <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:id="@id/layout_new_pwd" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/divide1">
        <TextView android:textSize="16.0sp" android:layout_width="90.0dip" android:layout_marginLeft="10.0dip" android:text="@string/new_pwd_title" android:drawableRight="@null" style="@style/setting_text_title" />
        <EditText android:textSize="16.0sp" android:id="@id/et_new_pwd" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:hint="@string/new_pwd_content" android:inputType="textPassword" />
    </LinearLayout>
    <TextView android:id="@id/divide2" android:background="@color/border_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/layout_new_pwd" />
    <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:id="@id/layout_confirm_pwd" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/divide2">
        <TextView android:textSize="16.0sp" android:ellipsize="none" android:layout_width="90.0dip" android:layout_marginLeft="10.0dip" android:text="@string/new_pwd_verify_title" android:drawableRight="@null" style="@style/setting_text_title" />
        <EditText android:textSize="16.0sp" android:id="@id/et_verify_pwd" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:hint="@string/new_pwd_verify_content" android:inputType="textPassword" />
    </LinearLayout>
</RelativeLayout>