<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@string/main_content" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/shadow_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="-10.0dip" />
    <include android:id="@id/top" layout="@layout/titlebar_top" />
    <ScrollView android:background="@color/bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/top">
        <LinearLayout android:orientation="vertical" android:paddingTop="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/downloaded_sounds_title" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/downloaded_sound" android:background="@drawable/user_space_item_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="10.0dip" android:text="@string/downloaded_sounds" android:maxLines="1" android:drawableRight="@drawable/ic_more" />
            <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/live_radios_title" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/live_radio" android:background="@drawable/user_space_item_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="10.0dip" android:text="@string/live_history_radios" android:maxLines="1" android:drawableRight="@drawable/ic_more" />
            <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/online_sounds_title" />
            <LinearLayout android:orientation="vertical" android:background="@drawable/user_space_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center_vertical" android:id="@id/news_sound" android:background="@drawable/user_space_item_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/news_sounds" />
                <View android:background="@color/live_divider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="15.0dip" />
                <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center_vertical" android:id="@id/music_sound" android:background="@drawable/user_space_item_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/music_sounds" />
                <View android:background="@color/live_divider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="15.0dip" />
                <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center_vertical" android:id="@id/crosstalk_sound" android:background="@drawable/user_space_item_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/crosstalk_sounds" />
            </LinearLayout>
            <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/local_sounds_title" />
            <LinearLayout android:orientation="vertical" android:id="@id/container" android:background="@drawable/user_space_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center_vertical" android:id="@id/default_sound" android:background="@drawable/user_space_item_selector" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/default_sounds" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>