<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:layout_width="fill_parent" android:layout_height="@dimen/title_bar_height" android:layout_marginBottom="15.0dip" layout="@layout/titlebar_top" />
    <RelativeLayout android:orientation="vertical" android:id="@id/rl_my_point" android:background="@drawable/bg_layout_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginBottom="1.0px" android:minHeight="50.0dip">
        <TextView android:id="@id/score_tv" android:clickable="false" android:layout_width="wrap_content" android:text="@string/my_points" android:drawableLeft="@drawable/my_points_img" android:drawableRight="@null" style="@style/setting_text_title" />
        <TextView android:textSize="16.0sp" android:textColor="#ffff6600" android:id="@id/tv_scorenumber" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/score_tv" android:layout_centerVertical="true" />
        <TextView android:textSize="14.0sp" android:textColor="#ffcccccc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:text="@string/earning_points" android:layout_toLeftOf="@id/score_img" android:layout_centerVertical="true" />
        <ImageView android:id="@id/score_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:src="@drawable/ic_more" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:id="@id/tv_mall_order" android:text="@string/mall_order" android:drawableLeft="@drawable/ic_wd_order" style="@style/setting_text_title" />
    <TextView android:id="@id/tv_contact_us" android:layout_marginTop="15.0dip" android:layout_marginBottom="1.0px" android:text="@string/contact_us" android:drawableLeft="@drawable/contact_us" style="@style/setting_text_title" />
    <TextView android:id="@id/tv_carmode" android:layout_marginBottom="1.0px" android:text="@string/car_mode" android:drawableLeft="@drawable/me_setting_carmode" style="@style/setting_text_title" />
    <TextView android:id="@id/tv_share_app" android:text="@string/share_app" android:drawableLeft="@drawable/ic_share_app" style="@style/setting_text_title" />
</LinearLayout>