<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/user_space_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/tv_find_from_weixin" android:text="@string/findfriend_from_weixin" android:drawableLeft="@drawable/find_friend_weixin" style="@style/setting_text_title" />
    <View android:background="@color/border_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="44.0dip" />
    <TextView android:id="@id/tv_find_from_iphone" android:text="@string/findfriend_from_iphone" android:drawableLeft="@drawable/setting_bind_iphone" style="@style/setting_text_title" />
    <View android:background="@color/border_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="44.0dip" />
    <TextView android:id="@id/tv_find_from_weibo" android:text="@string/findfriend_from_weibo" android:drawableLeft="@drawable/setting_bind_weibo" style="@style/setting_text_title" />
    <View android:background="@color/border_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="44.0dip" />
    <TextView android:id="@id/tv_find_from_qq" android:text="@string/findfriend_from_qq" android:drawableLeft="@drawable/ic_tyq_zty_qq" style="@style/setting_text_title" />
</LinearLayout>