<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_amount" />
        <ImageView android:layout_gravity="end" android:id="@id/live_pay_close_btn" android:background="@drawable/ic_tabbar_close" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <TextView android:textSize="18.0sp" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/amount" />
        <EditText android:textSize="16.0sp" android:textColor="@color/orange_new" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/xi_coin_input" android:background="@drawable/bg_live_compose_input" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10.00" />
        <TextView android:textSize="18.0sp" android:textColor="@color/orange_new" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/xi_icon" />
    </LinearLayout>
    <TextView android:textSize="18.0sp" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_marginTop="5.0dip" android:text="@string/tip_should_pay" />
    <TextView android:textSize="18.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/live_pay_ok" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="10.0dip" android:text="@string/certain" />
</LinearLayout>